# Qrcode-Detect

./: .gitignore  QR-00100.txt  QR-00103.txt  QR-00104.txt  QR-00105.txt  QR-00106.txt  QR-00108.txt  QR-00109.txt  QR-00111.txt  QR-00115.txt  QR-00117.txt  QR-00119.txt  QR-00120.txt  QR-00121.txt  QR-00122.txt  QR-00124.txt  QR-00126.txt  QR-00127.txt  QR-00130.txt  QR-00131.txt  QR-00134.txt  QR-00135.txt  QR-00136.txt  QR-00137.txt  QR-00139.txt  QR-00142.txt  QR-00144.txt  QR-00147.txt  QR-00149.txt  QR-00151.txt  QR-00152.txt  QR-00153.txt  QR-00154.txt  QR-00156.txt  QR-00157.txt  QR-00168.txt  QR-00170.txt  QR-00171.txt  QR-00172.txt  QR-00173.txt  (+16 more)
src/caffe/: Makefile.config  draw.py
src/test-opencv/: CMakeLists.txt  Makefile  README.md  test-tencent.cpp  test.cpp
tutorials/: caffe.md  tencent.md
二维码数据集/: QR-00800.xml  QR-00801.xml  QR-00802.xml  QR-00803.xml  QR-00804.xml  QR-00805.xml  QR-00806.xml  QR-00807.xml  QR-00808.xml  QR-00809.xml  QR-00810.xml  QR-00811.xml  QR-00812.xml  QR-00813.xml  QR-00814.xml  QR-00815.xml  QR-00816.xml  QR-00817.xml  QR-00818.xml  QR-00819.xml  QR-00820.xml  QR-00821.xml  QR-00822.xml  QR-00823.xml  QR-00824.xml  QR-00825.xml  QR-00826.xml  QR-00827.xml  QR-00828.xml  QR-00829.xml  QR-00830.xml  QR-00831.xml  QR-00832.xml  QR-00833.xml  QR-00834.xml  QR-00835.xml  QR-00836.xml  QR-00837.xml  QR-00838.xml  QR-00839.xml  (+59 more)
二维码数据集/标签/: QR-00001.txt  QR-00002.txt  QR-00004.txt  QR-00005.txt  QR-00006.txt  QR-00007.txt  QR-00008.txt  QR-00009.txt  QR-00010.txt  QR-00011.txt  QR-00012.txt  QR-00013.txt  QR-00014.txt  QR-00015.txt  (+917 more)
(+778 files in other folders)
